k8s/applications/external/synology/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: synology-ds920plus
  namespace: synology
  labels:
    kubernetes.io/service-name: synology-ds920plus
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 5001
endpoints:
  - addresses:
      - 10.1.30.50
    conditions: { }
