k8s/applications/external/synology/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: synology-ds920plus-tls
  namespace: synology
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
  hostnames:
    - "ds920plus.home.eudald.gr"
  rules:
    - backendRefs:
        - name: synology-ds920plus
          port: 443
